# freshdesk-sdk

./: .envrc  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
chart/: Chart.yaml
chart/templates/: openapi.yaml
configs/: config.yaml  openapi.yaml
examples/magic-link/: main.py
freshdesk/: __init__.py  client.py
freshdesk/api/tickets/: create_reply.py  create_ticket.py
freshdesk/models/: __init__.py  conversations.py  create_note_requests.py  create_reply_requests.py  ticket_base.py
templates/: README.md.jinja  client.py.jinja  pyproject.toml.jinja
values/: create_note.yaml  create_reply.yaml  create_ticket.yaml  values.yaml
