[project]
name = "freshdesk-sdk"
version = "v0.0.1"
description = "A client library for accessing Freshdesk SDK"
authors = []
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "httpx>=0.20.0,<0.28.0",
    "attrs>=21.3.0",
    "python-dateutil>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freshdesk"]

[tool.hatch.build.targets.sdist]
include = [
    "freshdesk",
    "CHANGELOG.md",
    "freshdesk/py.typed",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
